@@ -21,7 +21,7 @@ setup(name='complete',
       keywords=['pypi', 'quality', 'example'],
       author='Lennart Regebro',
       author_email='regebro@gmail.com',
-      url='http://colliberty.com',
+      project_urls={'Source Code': 'https://github.com/regebro/pyroma'},
       license='MIT',
       packages=find_packages(exclude=['ez_setup', 'examples', 'tests']),
       include_package_data=True,
