@@ -54,7 +54,7 @@ imperdiet enim nec velit posuere id dignissim massa molestie.""",
             'name': 'complete',
             'license': 'MIT',
             'summary': 'This is a test package for pyroma.',
-            'home_page': 'http://colliberty.com',
+            'home_page': 'https://github.com/regebro/pyroma',
             'stable_version': None,
             'cheesecake_installability_id': None,
             },
