@@ -37,7 +37,7 @@ COMPLETE = {'_setuptools': True,
             'keywords': ['pypi', 'quality', 'example'],
             'author': 'Lennart Regebro',
             'author_email': 'regebro@gmail.com',
-            'url': 'http://colliberty.com',
+            'project_urls': {'Source Code': 'https://github.com/regebro/pyroma'},
             'license': 'MIT',
             'zip_safe': True,
             'test_suite': "complete",
@@ -154,7 +154,7 @@ class RatingsTest(unittest.TestCase):
             "Your package does not have keywords data.",
             "Your package does not have author data.",
             "Your package does not have author_email data.",
-            "Your package does not have url data.",
+            "Your package should have a 'url' field with a link to the project home page, or a 'project_urls' field, with a dictionary of links, or both.",
             "Your package does not have license data.",
             "You should specify license in classifiers.",
             "Specifying a development status in the classifiers gives users " \
@@ -175,7 +175,7 @@ class RatingsTest(unittest.TestCase):
             "Your package does not have keywords data.",
             "Your package does not have author data.",
             "Your package does not have author_email data.",
-            "Your package does not have url data.",
+            "Your package should have a 'url' field with a link to the project home page, or a 'project_urls' field, with a dictionary of links, or both.",
             "Your package does not have license data.",
             "You should specify license in classifiers.",
             "Specifying a development status in the classifiers gives users " \
@@ -198,7 +198,7 @@ class RatingsTest(unittest.TestCase):
             "Your package does not have keywords data.",
             "Your package does not have author data.",
             "Your package does not have author_email data.",
-            "Your package does not have url data.",
+            "Your package should have a 'url' field with a link to the project home page, or a 'project_urls' field, with a dictionary of links, or both.",
             "Your package does not have license data.",
             "You should specify license in classifiers.",
             "Specifying a development status in the classifiers gives users " \
