@@ -24,6 +24,7 @@ setup(name='pyroma',
       author='Lennart Regebro',
       author_email='regebro@gmail.com',
       url='https://github.com/regebro/pyroma',
+      project_urls={'Source Code': 'https://github.com/regebro/pyroma'},
       license='MIT',
       packages=find_packages(exclude=['ez_setup']),
       include_package_data=True,
